p2/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: app1.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app1-deployment
                port:
                  number: 80
    - host: app2.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app2-deployment
                port:
                  number: 80
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app3-deployment
                port:
                  number: 80
